# wims

./: .gitignore  CMakeLists.txt  README.md
docs/: concept_design
include/inventory/: component.hpp  container.hpp  resistor.hpp
include/web/: server.hpp
src/: main.cpp
